--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - PORT=5000
       - MONGO_URI=mongodb://mongo:27017/task-management
       - NODE_ENV=development
-      - JWT_SECRET=abc123def456ghi789jkl
+      - JWT_SECRET=${JWT_SECRET}
     volumes:
       - ./:/usr/src/app
       - /usr/src/app/node_modules
